syntax = "proto3";

import "ai/lzy/v1/common/data-scheme.proto";
import "google/protobuf/timestamp.proto";

package ai.lzy.v1.whiteboard;

option java_outer_classname = "LWB";
option java_package = "ai.lzy.v1.whiteboard";

message Whiteboard {
  string id = 1;
  string name = 2;
  repeated string tags = 3;
  repeated WhiteboardField fields = 4;
  Storage storage = 5;
  string namespace = 6;
  Status status = 7;
  google.protobuf.Timestamp createdAt = 8;

  enum Status {
    WHITEBOARD_STATUS_UNSPECIFIED = 0;
    CREATED = 1;
    FINALIZED = 2;
  }
}

message WhiteboardField {
  string name = 1;
  ai.lzy.v1.common.DataScheme scheme = 2;
}

message Storage {
  string name = 1;
  string description = 2;
  string uri = 3;
}

message TimeBounds {
  google.protobuf.Timestamp from_ = 1;  // from_ because of python 'from' keyword
  google.protobuf.Timestamp to = 2;
}
